--- a/example/app/package.json
+++ b/example/app/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "react-diff-view-example",
+  "name": "diff-view-react-example",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://github.com/wmzy/react-diff-view/",
+  "homepage": "https://github.com/wmzy/diff-view-react/",
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-diff-view": "file:../../",
+    "diff-view-react": "file:../../",
     "react-scripts": "1.0.10"
   },
   "scripts": {
