--- a/example/app/public/manifest.json
+++ b/example/app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React DS",
-  "name": "React DS Example",
+  "short_name": "Diff View Example",
+  "name": "Diff View Example",
   "icons": [
     {
       "src": "favicon.ico",
