--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "bugs": {
     "url": "https://github.com/wmzy/diff-view-react/issues"
   },
-  "homepage": "https://github.com/wmzy/diff-view-react#readme",
+  "homepage": "https://wmzy.github.io/diff-view-react/",
   "peerDependencies": {
     "prop-types": "^15.0",
     "react": "^^15.0.0-rc || ^15.0"
